--- a/prog_assign_1.ipynb
+++ b/prog_assign_1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Basics\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Midhun Kandakatla\n",
     "\n",
     "In this assignment you will be writing several small snippets of Python to solve individual problems.  Unless otherwise specified, you should put your work in the integrated Code cells in this document.\n",
     "\n",
@@ -19,10 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6/3\n",
+    "print('Result:',a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,10 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n",
+      "5040\n",
+      "40320\n",
+      "362880\n"
+     ]
+    }
+   ],
+   "source": [
+    "fact=1\n",
+    "for a in range(1,10):\n",
+    "    fact=fact*a\n",
+    "    print(fact)"
+   ]
   },
   {
    "cell_type": "markdown",
