--- a/prog_assign_1.ipynb
+++ b/prog_assign_1.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,10 +64,10 @@
     }
    ],
    "source": [
-    "fact=1\n",
+    "result=1\n",
     "for a in range(1,10):\n",
-    "    fact=fact*a\n",
-    "    print(fact)"
+    "    result=result*a\n",
+    "    print(result)"
    ]
   },
   {
